Fix clipping of authorization tables in experimental Manage Jenkins UI

--- a/src/main/scss/components/_section.scss
+++ b/src/main/scss/components/_section.scss
@@ -3,7 +3,12 @@
 .jenkins-section {
   border-top: var(--jenkins-border);
   padding: var(--section-padding) 0 0 0;
-  max-width: 1800px;
+  width: 100%;
+
+  .app-settings-container & {
+    max-width: none;
+    width: 100%;
+  }
 
   &:last-child {
     padding-bottom: 0;
